--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 csv = "1.2.1"
 clap = { version = "4.2", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
+chrono= { version = "0.4.11", features = ["serde"] }
 
 [dev-dependencies]
 rstest = "0.17.0"
