--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ csv = "1.2.1"
 clap = { version = "4.2", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 chrono= { version = "0.4.24", features = ["serde"] }
+polars = { version = "0.28.0", features = ["lazy", "dtype-date", "temporal", "strings"] }
 
 [dev-dependencies]
 rstest = "0.17.0"
