--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chrono= { version = "0.4.26", features = ["serde"] }
 polars = { version = "0.30.0", features = ["lazy", "dtype-date", "temporal", "strings", "concat_str"] }
 
 [dev-dependencies]
+pretty_assertions = "1.4.0"
 rstest = "0.18.1"
 
 [profile.dev]
