--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -21,5 +21,7 @@ jobs:
         with:
           components: clippy, rustfmt
       - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: "v1-rust"
       - uses: taiki-e/install-action@just
       - run: just verify
