--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]äclap = { version = "4.5", features = ["derive"] }
+[dependencies]
+clap = { version = "4.5", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 chrono= { version = "0.4.38", features = ["serde"] }
 strum = { version = "0.26" }
