--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.200", features = ["derive"] }
 chrono= { version = "0.4.38", features = ["serde"] }
 strum = { version = "0.26.2" }
 strum_macros = { version = "0.26.2" }
+calamine = "0.26.1"
 
 [dependencies.polars]
 version = "0.45.0"
