--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chrono= { version = "0.4.38", features = ["serde"] }
 strum = { version = "0.26.2" }
 strum_macros = { version = "0.26.2" }
 quick-xml = { version = "0.37.1", features = ["serde"] }
+toml = "0.8.19"
 
 [dependencies.polars]
 version = "0.45.0"
