spike: Process monthly closing from Banana (#300)
Allowes us to print the output of the monthly closing data (export as xls from banana) compared to the budget to the console.

Bare minimum. Extended testing deferred, automatic export of an Excel deferred, processing monthly slices deferred.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ serde = { version = "1.0.200", features = ["derive"] }
 chrono= { version = "0.4.38", features = ["serde"] }
 strum = { version = "0.26.2" }
 strum_macros = { version = "0.26.2" }
+quick-xml = { version = "0.37.1", features = ["serde"] }
+toml = "0.8.19"
 
 [dependencies.polars]
 version = "0.46.0"
