chore(deps): Pin some versions

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -23,5 +23,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           prefix-key: "v5-rust"
-      - uses: taiki-e/install-action@just
+      - uses: taiki-e/install-action@37bdc826eaedac215f638a96472df572feab0f9b # v2
+        with:
+          tool: just@1
       - run: just verify
