--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -16,9 +16,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: taiki-e/install-action@cargo-hack
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: taiki-e/install-action@37bdc826eaedac215f638a96472df572feab0f9b # v2
         with:
+          tool: cargo-hack
+      - uses: dtolnay/rust-toolchain@56f84321dbccf38fb67ce29ab63e4754056677e0
+        with:
+          toolchain: stable
           components: clippy, rustfmt
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6 # v2.7.8
         with:
