--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,6 +17,20 @@
         "dev-dependencies"
       ],
       "automerge": true
-    }
+    },
+    {
+      "matchManagers": [
+        "github-actions"
+      ],
+      "matchDepTypes": [
+        "action"
+      ],
+      "matchUpdateTypes": [
+        "digest"
+      ],
+        "automerge": true,
+        "automergeType": "branch"
+        "requiredStatusChecks": ["Verify"]
+      }
   ]
 }
