chore: fix renovate-config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -28,9 +28,9 @@
       "matchUpdateTypes": [
         "digest"
       ],
-        "automerge": true,
-        "automergeType": "branch"
-        "requiredStatusChecks": ["Verify"]
-      }
+      "automerge": true,
+      "automergeType": "branch",
+      "requiredStatusChecks": ["Verify"]
+    }
   ]
 }
