fix: Add missing dtypes categorical and i128
see https://github.com/pola-rs/polars/issues/22610#issuecomment-2898122915

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,9 @@ version = "0.48.1"
 features = [
     "abs",
     "concat_str",
+    "dtype-categorical",
     "dtype-date",
+    "dtype-i128",
     "is_in",
     "lazy",
     "regex",
