--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -16,17 +16,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: taiki-e/install-action@e328d9d001c908ed6a5c128f1d6881ab8525f4e3 # v2
-        with:
-          tool: cargo-hack
-      - uses: dtolnay/rust-toolchain@b3b07ba8b418998c39fb20f53e8b695cdcc8de1b
-        with:
-          toolchain: stable
-          components: clippy, rustfmt
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6 # v2.7.8
         with:
           prefix-key: "v5-rust"
-      - uses: taiki-e/install-action@e328d9d001c908ed6a5c128f1d6881ab8525f4e3 # v2
-        with:
-          tool: just@1
+
+      - name: Set up Homebrew
+        run: |
+          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+          echo "HOMEBREW_PREFIX=$(/home/linuxbrew/.linuxbrew/bin/brew --prefix)" >> $GITHUB_ENV
+          echo "$(/home/linuxbrew/.linuxbrew/bin/brew --prefix)/bin" >> $GITHUB_PATH
+      - name: install just
+        run: /home/linuxbrew/.linuxbrew/bin/brew install just
+
       - run: just verify
