--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ quick-xml = { version = "0.38.1", features = ["serde"] }
 toml = "0.9.5"
 
 [dependencies.polars]
-version = "0.49.1"
+version = "0.50.0"
 features = [
     "abs",
     "concat_str",
@@ -32,6 +32,7 @@ features = [
     "semi_anti_join",
     "strings",
     "temporal",
+    "timezones",
 ]
 
 [dev-dependencies]
