--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ strum = { version = "0.27.2" }
 strum_macros = { version = "0.27.2" }
 quick-xml = { version = "0.38.3", features = ["serde"] }
 toml = "0.9.5"
+polars_excel_writer = "0.19.0"
 
 [dependencies.polars]
 version = "0.50.0"
