--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ strum_macros = { version = "0.27.2" }
 quick-xml = { version = "0.38.3", features = ["serde"] }
 toml = "0.9.5"
 polars_excel_writer = "0.19.0"
+calamine = { version = "0.30.1", features = ["dates"] }
 
 [dependencies.polars]
 version = "0.50.0"
