--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lola-sumup"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Urs Joss <urs.joss@gmx.ch>"]
 edition = "2024"
 description = "A cli program to create LoLa specific exports from monthly SumUp reports"
@@ -16,6 +16,9 @@ strum = { version = "0.27.2" }
 strum_macros = { version = "0.27.2" }
 quick-xml = { version = "0.38.3", features = ["serde"] }
 toml = "0.9.5"
+polars_excel_writer = "0.19.0"
+calamine = { version = "0.30.1", features = ["dates"] }
+rust_xlsxwriter = { version = "0.90.0", features = ["polars"] }
 
 [dependencies.polars]
 version = "0.50.0"
